<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.3"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="199dp" />

    <TextView
        android:id="@+id/tv_user_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_login_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/separator" />

    <AutoCompleteTextView
        android:id="@+id/et_user"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorLight"
        android:textCursorDrawable="@null"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/tv_user_label"
        app:layout_constraintRight_toLeftOf="@+id/iv_user_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_label" />

    <ImageView
        android:id="@+id/iv_user_icon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/content_description"
        android:tint="@color/colorLight"
        app:layout_constraintBottom_toBottomOf="@+id/et_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_user"
        app:srcCompat="@drawable/ic_account_circle" />

    <View
        android:id="@+id/view_user_underline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorLight"
        app:layout_constraintLeft_toLeftOf="@+id/et_user"
        app:layout_constraintRight_toRightOf="@+id/iv_user_icon"
        app:layout_constraintTop_toBottomOf="@+id/et_user" />

    <TextView
        android:id="@+id/tv_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_login_pass"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorLight"
        app:layout_constraintLeft_toLeftOf="@+id/view_user_underline"
        app:layout_constraintTop_toBottomOf="@+id/view_user_underline" />

    <AutoCompleteTextView
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/transparent"
        android:inputType="textWebPassword"
        android:textColor="@color/colorLight"
        android:textCursorDrawable="@null"
        app:layout_constraintLeft_toLeftOf="@+id/tv_pass_label"
        app:layout_constraintRight_toLeftOf="@+id/iv_pass_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass_label" />

    <ImageView
        android:id="@+id/iv_pass_icon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/content_description"
        android:tint="@color/colorLight"
        app:layout_constraintRight_toRightOf="@+id/view_user_underline"
        app:layout_constraintTop_toTopOf="@+id/et_pass"
        app:srcCompat="@drawable/ic_lock_outline" />

    <View
        android:id="@+id/view_pass_underline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorLight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/et_pass"
        app:layout_constraintRight_toRightOf="@+id/iv_pass_icon"
        app:layout_constraintTop_toBottomOf="@+id/et_pass" />

    <Button
        android:id="@+id/button_command"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:textAllCaps="true"
        android:textColor="@color/colorLight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/et_pass"
        app:layout_constraintRight_toRightOf="@+id/iv_pass_icon"
        app:layout_constraintTop_toBottomOf="@+id/view_pass_underline" />

    <Button
        android:id="@+id/button_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:textAllCaps="true"
        android:textColor="@color/colorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/button_command"
        app:layout_constraintRight_toRightOf="@+id/button_command"
        app:layout_constraintTop_toBottomOf="@+id/button_command"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorLight"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_subtitle"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="@color/colorLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:paddingBottom="11dp"
        android:paddingTop="11dp"
        app:com_facebook_login_text="Facebook"
        app:layout_constraintBottom_toBottomOf="@+id/google_sign_in_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="170dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_login_option"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorLight"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_switch"
        app:layout_constraintVertical_bias="0.948" />

    <View
        android:id="@+id/left_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:background="@color/colorLight"
        app:layout_constraintBottom_toBottomOf="@+id/tv_option"
        app:layout_constraintLeft_toRightOf="@+id/tv_option"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_option" />

    <View
        android:id="@+id/right_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorLight"
        app:layout_constraintBottom_toBottomOf="@+id/tv_option"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_option"
        app:layout_constraintTop_toTopOf="@+id/tv_option"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>